--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,231 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title></title>
+  <meta charset="UTF-8">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Cloudbudget</title>
 </head>
 <body>
-
+<div class="hero-wrapper">
+  <header class="header">
+    <div class="container header__container">
+      <a href="#" class="header__logo">
+        <img src="img/cloudheader.png" alt="A cloud icon" class="header__icon">Cloududget</a>
+      <nav class="nav">
+        <ul class="header__list">
+          <li class="header__item"><a href="#" class="header__link">Overview</a></li>
+          <li class="header__item"><a href="" class="header__link">Features</a></li>
+          <li class="header__item"><a href="" class="header__link">Technology</a></li>
+          <li class="header__item"><a href="" class="header__link">Contact</a></li>
+          <li class="header__item"><a href="" class="header__link">Sign up</a></li>
+        </ul>
+      </nav>
+      <button class="header__button">Login</button>
+    </div>
+  </header>
+  <div class="hero-text">
+    <div class="container hero-text__container">
+      <h1 class="main-heading">Cloudbudget</h1>
+      <p class="hero-text__paragraph">Cloud budget management for everyone. Only €69.95 a Month After a 7 Day Trial of
+        Up to €4.99</p>
+      <button class="hero-text__button">Sign up</button>
+    </div>
+  </div>
+</div>
+<section class="easy-use">
+  <div class="container easy-use__container">
+    <div class="easy-use__text-wrapper">
+      <h2 class="heading easy-use__heading">Easy to Use Cloud Budget Management Software</h2>
+      <p class="text easy-use__text">Our software is made so you can access and manage your budget and expenses online
+        at any time from any device. It provides detailed income and expense reports with graphs so you can easilly see
+        your spending patterns and budget at a glance. Read below to find out more.</p>
+    </div>
+    <div class="easy-use__img-wrapper">
+      <img src="img/Video-Section.png" alt="A video of a group of people on a meeting" class="easy-use__image">
+    </div>
+  </div>
+</section>
+<section class="features">
+  <div class="container features__container">
+    <h2 class="heading heading--center features__heading">Features</h2>
+    <ul class="features__list">
+      <li class="features__item">
+        <img src="img/Bg.jpg" alt="A man holds money" class="features__image">
+        <div class="features__test-wrapper">
+          <h3 class="subheading features__subheading">Supports All Currencies and Cards</h3>
+          <p class="features__text">We support all popular currencies and is fully customizable to add</p>
+          <a href="#" class="features__link">Read more</a>
+        </div>
+      </li>
+      <li class="features__item">
+        <img src="img/Second-image-li.jpg" alt="A woman holds a phone" class="features__image">
+        <div class="features__test-wrapper">
+          <h3 class="subheading features__subheading">Manage your expenses on the go</h3>
+          <p class="features__text">You can access your account from anywhere in the world on any device</p>
+          <a href="#" class="features__link">Read more</a>
+        </div>
+      </li>
+      <li class="features__item">
+        <img src="img/third-picture-li.png" alt="A corridor with glass walls" class="features__image">
+        <div class="features__test-wrapper">
+          <h3 class="subheading features__subheading">Cloud Budget Management Software</h3>
+          <p class="features__text">Our software is made so you can access and manage your budget</p>
+          <a href="#" class="features__link">Read more</a>
+        </div>
+      </li>
+    </ul>
+  </div>
+</section>
+<section class="technology">
+  <div class="container technology__container">
+    <h2 class="heading heading--center technology__heading">Technology</h2>
+    <ol class="technology__list">
+      <li class="technology__item">
+        <img src="img/cloud.svg" alt="A cloud icon" class="technology__icon">
+        <div class="technology__text-wrapper">
+          <h3 class="subheading technology__subheading">Cloud Storage</h3>
+          <p class="text-xs technology__text">Access your account from anywhere in the world on any device</p>
+        </div>
+      </li>
+      <li class="technology__item">
+        <img src="img/shield.svg" alt="A shield icon" class="technology__icon">
+        <div class="technology__text-wrapper">
+          <h3 class="subheading technology__subheading">Secure</h3>
+          <p class="text-xs technology__text">All your information is stored on secure cloud servers</p>
+        </div>
+      </li>
+      <li class="technology__item">
+        <img src="img/pdf.svg" alt="A PDF icon" class="technology__icon">
+        <div class="technology__text-wrapper">
+          <h3 class="subheading technology__subheading">PDF Download</h3>
+          <p class="text-xs technology__text">Download any of your reports in PDF format</p>
+        </div>
+      </li>
+      <li class="technology__item">
+        <img src="img/CSV.svg" alt="A CSV icon" class="technology__icon">
+        <div class="technology__text-wrapper">
+          <h3 class="subheading technology__subheading">CSV Download</h3>
+          <p class="text-xs technology__text">All your information is stored on secure cloud servers</p>
+        </div>
+      </li>
+    </ol>
+  </div>
+</section>
+<section class="stay-focused">
+  <div class="container stay-focused__container">
+    <div class="stay-focused__text-wrapper">
+      <h2 class="heading heading--white stay-focused__heading">Stay focused on saving money</h2>
+      <p class="text text--white stay-focused__text">It is important to stay focused on saving money in any way you
+        can. We help you monitor your spending habits so you can easily spot and cut any unnecessary expenses.
+        Simply join today to get started!</p>
+      <div class="stay-focused__icons-wrapper">
+        <a href="#" class="stay-focused__link">
+          <img src="img/ion-logo-google-playstore.svg" alt="A Playstore icon" class="stay-focused__store-icon"></a>
+        <a href="#" class="stay-focused__link">
+          <img src="img/ion-logo-apple-appstore.svg" alt="An Appstore icon" class="stay-focused__store-icon"></a>
+        <a href="#" class="stay-focused__link">
+          <img src="img/simple-icons_windows.svg" alt="A Windows store icon" class="stay-focused__store-icon"></a>
+      </div>
+    </div>
+    <div class="stay-focused__card-wrapper">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5980.431049102697!2d4.90027487033411!3d52.
+      37471702273097!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c609b70dd81623%3A0xcae71b8d3adfd142!2z0KbQ
+      tdC90YLRgNCw0LvRjNC90LjQuSDQstC-0LrQt9Cw0Ls!5e0!3m2!1suk!2sua!4v1663329523918!5m2!1suk!2sua"
+              width="600" height="450" style="border:0;" allowfullscreen=""
+              loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+  </div>
+</section>
+<section class="contact">
+  <div class="container contact__container">
+    <div class="contact__text-wrapper">
+      <h2 class="heading contact__heading">Contact</h2>
+      <p class="text contact__text">Questions or concerns? Just fill out the form below and our support team will get
+        back to you within 24 hours. But I must explain to you how all this mistaken idea of denouncing pleasure and
+        praising pain was born and I will give you a complete account of the system, and expound the actual teachings of
+        the great explorer of the truth, the master-builder of human happiness.</p>
+    </div>
+    <div class="contact__form-wrapper">
+      <form action="#" class="form">
+        <label class="contact__first-name-label">
+          <input type="text" class="contact-input input input--half contact__text" placeholder="First Name">
+        </label>
+        <label class="contact__last-name-label">
+          <input type="text" class="contact-input input input--half contact__text" placeholder="Last Name">
+        </label>
+        <label class="contact__phone">
+          <input type="number" class="contact__phone-input contact__text" placeholder="Phone Number">
+        </label>
+        <label class="contact__select-label">
+          <select name="select" id="" class="contact__select">
+            <option class="contact__option contact__text" disabled>Select service</option>
+            <option value="Lorem" class="contact__option contact__text">Lorem</option>
+            <option value="Ipsum" class="contact__option contact__text">Ipsum</option>
+            <option value="Dolor" class="contact__option contact__text">Dolor</option>
+          </select>
+        </label>
+        <button class="contact__button" type="submit">Submit now</button>
+      </form>
+    </div>
+  </div>
+</section>
+<footer class="footer">
+  <div class="container footer__container">
+    <div class="footer__address">
+      <h3 class="subheading footer__address-subheading">
+        Address
+      </h3>
+      <p class="text-xs footer__address-text">
+        Pipang Ltd, Griva Digeni,
+        81-83 Jacovides Tower, 1st Floor
+        1090 Picosia USA
+      </p>
+      <p class="text-xs footer__copyright">
+        Pipang Ltd, Griva Digeni,
+        81-83 Jacovides Tower, 1st Floor
+        1090 Picosia USA
+      </p>
+    </div>
+    <div class="footer__services">
+      <h3 class="subheading footer__services-subheading">Services</h3>
+      <ul class="footer__list">
+        <li class="footer__item">
+          <a href="#" class="footer__link text-xs">Overview</a></li>
+        <li class="footer__item">
+          <a href="#" class="footer__link text-xs">Features</a></li>
+        <li class="footer__item">
+          <a href="#" class="footer__link text-xs">Technology</a></li>
+        <li class="footer__item">
+          <a href="#" class="footer__link text-xs">Terms & Conditions</a></li>
+        <li class="footer__item">
+          <a href="#" class="footer__link text-xs">Privacy</a></li>
+      </ul>
+    </div>
+    <div class="footer__contacts">
+      <h3 class="subheading footer__contacts-subheading">Get in Touch</h3>
+      <ul class="footer__list">
+        <li class="footer__item">
+          <a href="#" class="footer__link text-xs">info@cloudbudget.com</a></li>
+        <li class="footer__item">
+          <a href="#" class="footer__link text-xs">+1 844-721-7120</a>
+        </li>
+        <li class="footer__item">
+          <a href="#" class="footer__social-media">
+            <img src="img/fb-footer-icon.svg" alt="A Facebook icon" class="footer__social-media-icon"></a>
+          <a href="#" class="footer__social-media">
+            <img src="img/feather-linkedin.svg" alt="A Linkedin icon" class="footer__social-media-icon"></a>
+          <a href="#" class="footer__social-media">
+            <img src="img/twitter-footer-.png" alt="A Twitter icon" class="footer__social-media-icon"></a>
+        </li>
+      </ul>
+      <div class="footer__payments">
+        <h3 class="subheading footer__payments-subheading">We support</h3>
+        <img src="img/secure-p.jpg" alt="A Mastercard icon" class="footer__payments-image">
+      </div>
+    </div>
+  </div>
+</footer>
 </body>
 </html>
