Added a hero page markup

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <header class="header">
     <div class="container header__container">
       <a href="#" class="header__logo">
-        <img src="img/cloudheader.png" alt="A cloud icon" class="header__icon">Cloududget</a>
+        <img src="img/cloudheader.png" alt="A cloud icon" class="header__icon">Cloudbudget</a>
       <nav class="nav">
         <ul class="header__list">
           <li class="header__item"><a href="#" class="header__link">Overview</a></li>
@@ -30,7 +30,9 @@
       <h1 class="main-heading">Cloudbudget</h1>
       <p class="hero-text__paragraph">Cloud budget management for everyone. Only €69.95 a Month After a 7 Day Trial of
         Up to €4.99</p>
+      <div class="hero-text__button-wrapper">
       <button class="hero-text__button">Sign up</button>
+      </div>
     </div>
   </div>
 </div>
