--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
     <ul class="features__list">
       <li class="features__item">
         <img src="img/Bg.jpg" alt="A man holds money" class="features__image">
-        <div class="features__test-wrapper">
+        <div class="features__text-wrapper">
           <h3 class="subheading features__subheading">Supports All Currencies and Cards</h3>
           <p class="features__text">We support all popular currencies and is fully customizable to add</p>
           <a href="#" class="features__link">Read more</a>
@@ -63,7 +63,7 @@
       </li>
       <li class="features__item">
         <img src="img/Second-image-li.jpg" alt="A woman holds a phone" class="features__image">
-        <div class="features__test-wrapper">
+        <div class="features__text-wrapper">
           <h3 class="subheading features__subheading">Manage your expenses on the go</h3>
           <p class="features__text">You can access your account from anywhere in the world on any device</p>
           <a href="#" class="features__link">Read more</a>
@@ -71,10 +71,11 @@
       </li>
       <li class="features__item">
         <img src="img/third-picture-li.png" alt="A corridor with glass walls" class="features__image">
-        <div class="features__test-wrapper">
+        <div class="features__text-wrapper">
           <h3 class="subheading features__subheading">Cloud Budget Management Software</h3>
           <p class="features__text">Our software is made so you can access and manage your budget</p>
           <a href="#" class="features__link">Read more</a>
+
         </div>
       </li>
     </ul>
