Added a contact section markup

--- a/src/index.html
+++ b/src/index.html
@@ -137,7 +137,7 @@
       37471702273097!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c609b70dd81623%3A0xcae71b8d3adfd142!2z0KbQ
       tdC90YLRgNCw0LvRjNC90LjQuSDQstC-0LrQt9Cw0Ls!5e0!3m2!1suk!2sua!4v1663329523918!5m2!1suk!2sua"
               width="600" height="450" style="border:0;" allowfullscreen=""
-              loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="stay-focused__iframe"></iframe>
     </div>
   </div>
 </section>
@@ -152,10 +152,10 @@
     </div>
     <div class="contact__form-wrapper">
       <form action="#" class="form">
-        <label class="contact__first-name-label">
+        <label class="contact__first-name-label label label--half">
           <input type="text" class="contact-input input input--half contact__text" placeholder="First Name">
         </label>
-        <label class="contact__last-name-label">
+        <label class="contact__last-name-label label label--half">
           <input type="text" class="contact-input input input--half contact__text" placeholder="Last Name">
         </label>
         <label class="contact__phone">
