Added a footer markup

--- a/src/index.html
+++ b/src/index.html
@@ -177,7 +177,7 @@
 <footer class="footer">
   <div class="container footer__container">
     <div class="footer__address">
-      <h3 class="subheading footer__address-subheading">
+      <h3 class="subheading footer__address-subheading footer__subheading">
         Address
       </h3>
       <p class="text-xs footer__address-text">
@@ -186,13 +186,11 @@
         1090 Picosia USA
       </p>
       <p class="text-xs footer__copyright">
-        Pipang Ltd, Griva Digeni,
-        81-83 Jacovides Tower, 1st Floor
-        1090 Picosia USA
+        Copyright 2020 CloudBudget
       </p>
     </div>
     <div class="footer__services">
-      <h3 class="subheading footer__services-subheading">Services</h3>
+      <h3 class="subheading footer__services-subheading footer__subheading">Services</h3>
       <ul class="footer__list">
         <li class="footer__item">
           <a href="#" class="footer__link text-xs">Overview</a></li>
@@ -207,14 +205,14 @@
       </ul>
     </div>
     <div class="footer__contacts">
-      <h3 class="subheading footer__contacts-subheading">Get in Touch</h3>
+      <h3 class="subheading footer__contacts-subheading footer__subheading">Get in Touch</h3>
       <ul class="footer__list">
         <li class="footer__item">
           <a href="#" class="footer__link text-xs">info@cloudbudget.com</a></li>
         <li class="footer__item">
           <a href="#" class="footer__link text-xs">+1 844-721-7120</a>
         </li>
-        <li class="footer__item">
+        <li class="footer__item footer__social">
           <a href="#" class="footer__social-media">
             <img src="img/fb-footer-icon.svg" alt="A Facebook icon" class="footer__social-media-icon"></a>
           <a href="#" class="footer__social-media">
@@ -223,11 +221,12 @@
             <img src="img/twitter-footer-.png" alt="A Twitter icon" class="footer__social-media-icon"></a>
         </li>
       </ul>
+    </div>
+
       <div class="footer__payments">
-        <h3 class="subheading footer__payments-subheading">We support</h3>
+        <h3 class="subheading footer__payments-subheading footer__subheading">We support</h3>
         <img src="img/secure-p.jpg" alt="A Mastercard icon" class="footer__payments-image">
       </div>
-    </div>
   </div>
 </footer>
 </body>
